# idj-showcase

./: .gitignore  LICENSE  README.md  elm-package.json  game-samples.sql  idj-db.sql  idj-server.cabal  stack.yaml
assets/: style.css
snaplets/sqlite-simple/: devel.cfg
src/backend/: ApiRoutes.hs  Application.hs  Main.hs  PageRoutes.hs  Path.hs  Query.hs  Routes.hs  Types.hs  Utils.hs
src/frontend/Component/: Catalog.elm  Header.elm
src/frontend/Page/: Catalog.elm  Login.elm  Main.elm
src/frontend/Types/: GameInfo.elm
