name:                idj-server
version:             0.1.0.0
synopsis:            Web server used for University of Brasilia's Game Design showcase.
description:         Please see README.md
homepage:            http://github.com/VitorCBSB/idj-showcase#readme
license:             BSD3
license-file:        LICENSE
author:              Vitor Coimbra
maintainer:          vitorcoliveira91@gmail.com
copyright:           Copyright (c) 2015 Vitor Coimbra
category:            Application
build-type:          Simple
cabal-version:       >=1.10

executable run-server
  hs-source-dirs:      src/backend
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -threaded -O2 -W -rtsopts
  build-depends:       base >= 4.7 && < 5
                     , snap
                     , snap-core
                     , snap-server
                     , snap-loader-static
                     , snaplet-sqlite-simple
                     , blaze-html
                     , mtl
                     , filepath
                     , directory
                     , process
                     , cmdargs
                     , lens
                     , bytestring
                     , text
                     , aeson
                     , transformers
                     , containers

  other-modules:       Path
                     , Utils
                     , Application
                     , PageRoutes
                     , ApiRoutes
                     , Types
                     , Query
